# nus-alexandra-bpm

./: .gitignore  README.md  load_env.py  main.py  platformio.ini
ml/: evaluate_live_calibrated.py  evaluate_live_no_cal.py  evaluate_pulsedb.py  evaluate_trend.py  ml_pipeline.py  train.py
ml/data_collection/: data_collect.cpp  data_collect.py
ml/features/: extract.py
ml/loaders/: esp32.py  pulsedb.py
ml/models/: rfg.py  svr.py
ml/preprocessing/: process.py  segment.py
src/: main.cpp  plot.py
web-dashboard/backend/: pyproject.toml
web-dashboard/backend/app/: main.py
web-dashboard/frontend/: package-lock.json  package.json  vite.config.ts
web-dashboard/frontend/src/: App.tsx  main.tsx  mockData.ts  theme.ts
web-dashboard/frontend/src/components/: BPHistoryCard.tsx  BloodPressureCard.tsx  DashboardHeader.tsx  PPGChartCard.tsx  PageAlert.tsx  PageHeader.tsx  PatientCard.tsx  SectionHeader.tsx
